--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <title>JavaScript vs jQuery</title>
 
+    <link href="style.css" rel="stylesheet">
     <script src="jquery-3.4.1.js"></script>
 </head>
 
@@ -16,12 +17,14 @@
         <h3>Bara JavaScript</h3>
         <button id="get-weather-js">Hämta temperaturen i Lund</button>
         <p id="test-js"></p>
+        <button id="colour-js">Ändra färg på temperaturen</button>
     </div>
 
     <div>
         <h3>JavaScript med jQuery</h3>
         <button id="get-weather-jq">Hämta temperaturen i Lund</button>
         <p id="test-jq"></p>
+        <button id="colour-jq">Ändra färg på temperaturen</button>
     </div>
 
 
